# ross_cli

./: .gitignore  404.html  README.md  exit_codes.md  index.html  index.toml  paper.md  pyproject.toml  requirements.txt  ross-cli.rb  ross_cli.rb  rossproject_options.xlsx  sitemap.xml
Overview/: index.html
Overview/add_to_index/: index.html
Overview/index_repo/: index.html
Overview/install/: index.html
Overview/release/: index.html
docs/: index.md
search/: search_index.json
src/ross_cli/: cli.py  constants.py  pip_version_regex.py  setup.py
src/ross_cli/commands/: add_to_index.py  index.py  init.py  install.py  release.py  tap.py
src/ross_cli/git/: github.py  index.py  pyproject.py
src/ross_cli/utils/: check_gh.py  check_install.py  rossproject.py  urls.py  validate_authors.py
src/rto_projects/: cli.py  setup.py
src/rto_projects/commands/: add_to_index.py
src/rto_projects/git/: github.py  index.py  pyproject.py
tests/: 00_test_config.py  01_test_cli-init.py  02_test_init.py  03_test_tap.py  04_test_add_to_index.py  05_test_release.py  06_test_install.py  conftest.py  debug.py  debug_test.py  test_00_config.py  test_02_init.py  test_03_tap.py  test_04_add_to_index.py  test_05_release.py  test_06_install.py
