[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets]

[project]
name = "ross-cli"
version = "0.1.4"
description = "A simple, private, GitHub based index system for data science projects."
dependencies = [
    "tomli",
    "tomli-w",
    "typer"
]
authors = [
    {name = "Mitchell Tillman", email = "mtillman14@gmail.com"}
]
maintainers = [
    {name = "Mitchell Tillman", email = "mtillman14@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}

[project.metadata]
date = "2025-04-06"

[project.urls]
Homepage = "https://github.com/ResearchOS/ross_cli"
Repository = "https://github.com/ResearchOS/ross_cli"

[project.scripts]
ross = "ross_cli.cli:app"