[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.ross]
language = "python"
dependencies = []

[project]
name = "ross_cli"
version = "0.3.0"
authors = [
    {name = "Mitchell Tillman", email = "mtillman14@gmail.com"}
]
maintainers = [
    {name = "Mitchell Tillman", email = "mtillman14@gmail.com"}
]
readme = "README.md"
dependencies = [
    "tomli",
    "tomli_w",
    "typer"
]

[project.urls]
Homepage = "https://github.com/ResearchOS/ross_cli"
Repository = "https://github.com/ResearchOS/ross_cli"

[project.scripts]
ross = "ross_cli.cli:app"